--- a/black bottom banana cream pie.html
+++ b/black bottom banana cream pie.html
@@ -36,7 +36,7 @@
             <input type="radio" id="Juice" name="Extras" value="Juice">
             <label for="Juice">Juice</label>
             <br/><br/><br/>
-            <form method="post" action="order-recived-form.html"><button type="submit">PLACE ORDER</button></form>   
+            <form method="post" action="order-received-form.html"><button type="submit">PLACE ORDER</button></form>   
                 
             
             </div>
