--- a/deep fried lolipop chicken.html
+++ b/deep fried lolipop chicken.html
@@ -52,7 +52,7 @@
             <input type="checkbox" id="Sides" name="Side 4" value="Sweet Potatoes ">
             <label for="Side 4">Sweet Potatoes </label><br>
             <br/><br/><br/>
-            <form method="post" action="order-recived-form.html"><button type="submit">PLACE ORDER</button></form>
+            <form method="post" action="order-received-form.html"><button type="submit">PLACE ORDER</button></form>
                 
              
             </div>
