--- a/maple glazed chicken.html
+++ b/maple glazed chicken.html
@@ -50,7 +50,7 @@
             <input type="checkbox" id="Sides" name="Side 4" value="Chicken drummets">
             <label for="Side 4">chicken drummets</label>
             <br/><br/><br/>
-            <form method="post" action="order-recived-form.html"><button type="submit">PLACE ORDER</button></form>
+            <form method="post" action="order-received-form.html"><button type="submit">PLACE ORDER</button></form>
                 
              
             </div>
