--- a/red sangria.html
+++ b/red sangria.html
@@ -36,7 +36,7 @@
             <input type="checkbox" id="Sides" name="Side 4" value="French fries">
             <label for="Side 4">French fries</label><br>
             <br/><br/><br/>
-            <form method="post" action="order-recived-form.html"><button type="submit">PLACE ORDER</button></form> 
+            <form method="post" action="order-received-form.html"><button type="submit">PLACE ORDER</button></form> 
             
                 
              </div>
